syntax = "proto3";

package com.alioth4j.corneast_core.proto;

option java_package = "com.alioth4j.corneast_core.proto";
option java_outer_classname = "RequestProto";

message RequestDTO {
    string type = 1;
    string id = 2;

    oneof request {
        RegisterReqDTO registerReqDTO = 3;
        ReduceReqDTO reduceReqDTO = 4;
        QueryReqDTO queryReqDTO = 5;
        ReleaseReqDTO releaseReqDTO = 6;
    }
}

message RegisterReqDTO {
    string key = 1;
    int64 tokenCount = 2;
}

message ReduceReqDTO {
    string key = 1;
}

message QueryReqDTO {
    string key = 1;
}

message ReleaseReqDTO {
    string key = 1;
}
